# FEAR-MORE

./: .gitattributes  .gitignore  .gitmodules  Build FearMore Household Installer.cmd  Build FearMore Project Installer.cmd  CREDITS.md  LICENSE.md  Launch FearMore.cmd  QUICKSTART.md  README.md
docs/: ai-timing.md  asset-sourcing.md  building.md  code-map.md  controller-support.md  enhanced-gore.md  free-gore-assets.md  household-installer.md  modern-rendering.md  playable-build.md  private-owner-build.txt  project-installer.md  reference-implementations.md  roadmap.md  source-provenance.md
docs/releases/: v0.1.0.md  v0.1.1.md  v0.1.2.md
patches/echopatch/: 0001-add-game-module-compatibility-switch.patch  0002-minhook-match-echopatch-crt.patch  0003-add-remix-camera-diagnostics.patch  0004-add-camera-diagnostics.patch  0005-add-rtx-focus-preservation.patch  0006-add-rtx-camera-reassertion.patch
source-overlay/Game/: CMakeLists.txt
source-overlay/Game/ClientFxDLL/: CMakeLists.txt
source-overlay/Game/ClientShellDLL/: CMakeLists.txt  FearMoreCameraProbe.cpp  FearMoreCameraProbe.h  FearMoreControllerMgr.cpp  FearMoreControllerMgr.h  FearMoreControllerSettings.h  FearMoreCorpsePersistence.cpp  FearMoreCorpsePersistence.h  FearMoreDefaultBindingResolver.cpp  FearMoreDefaultBindingResolver.h  FearMoreGraphicsSettings.cpp  FearMoreGraphicsSettings.h  FearMoreRemasterQuality.cpp  FearMoreRemasterQuality.h
source-overlay/Game/LegacyPlatform/: CMakeLists.txt
source-overlay/Game/LegacyStdLith/: CMakeLists.txt
source-overlay/Game/Libs/LTGUIMgr/: CMakeLists.txt
source-overlay/Game/ObjectDLL/: AIProfiler.cpp  AIProfiler.h  CMakeLists.txt
source-overlay/Game/Shared/: CMakeLists.txt  FearMoreRuntimeControls.h
source-patches/: fearmore-game-modules.patch
source-scaffold/: CMakeLists.txt  CMakePresets.json
source-scaffold/cmake/: FearLegacyCompilerCompat.h  FearLegacyCrtCompat.cpp  FearLegacyProject.cmake  afxres.h
tools/bootstrap/: BOOTSTRAP-README.txt  Bootstrap-FearMoreProject.ps1  Build-FearMoreBootstrapRelease.ps1  FearMoreBootstrap.iss  FearMoreBootstrapPrerequisites.psm1  Test-FearMoreBootstrap.ps1
tools/echopatch/: Build-EngineOnlyEchoPatch.ps1  EchoPatch.camera-diagnostics.override.ini  EchoPatch.engine-only.ini  EchoPatch.remix-diagnostics.override.ini  EchoPatch.rtx-camera-reassertion.override.ini  EchoPatch.rtx-focus-preservation.override.ini  EchoPatchBuildFlavor.psm1  EchoPatchPromotion.psm1  README.md  Test-CameraDiagnosticsSource.ps1  Test-EchoPatchTransactionalBuild.ps1  Test-RtxCameraReassertionSource.ps1  Test-RtxFocusPreservationSource.ps1
tools/echopatch/overlays/: CameraDiagnostics.cpp  RemixCameraDiagnostics.cpp  RtxCameraReassertion.cpp  RtxFocusPreservation.cpp
tools/installer/: Build-FearMoreHouseholdInstaller.ps1  Build-FearMoreProjectInstaller.ps1  Ensure-FearMoreVCRuntime.ps1  FearMore.iss  FearMoreInstaller.psm1  Finish-FearMoreHdSetup.ps1  Install-FearMore.ps1  New-FearMoreInstallerPackage.ps1  PRIVATE-PROJECT-INSTALLER.txt  Remove-FearMore.ps1  Test-FearMoreInstaller.ps1
tools/public/: Build-FearMoreModules.ps1  Build-FearMorePublicProject.ps1  Get-FearMorePublicDependencies.ps1  Initialize-FearMoreModuleSource.ps1  Test-FearMorePublicRepository.ps1
tools/runtime/: Analyze-FearCameraCapture.ps1  FearControllerPackage.psm1  FearDdsIdentity.psm1  FearEnginePatchPackage.psm1  FearLauncherPackage.psm1  FearLauncherProfile.psm1  FearLauncherSettings.psm1  FearPostProcessPackage.psm1  FearRemixExperimentPlan.psm1  FearRendererPackage.psm1  FearRetailSidecarPackage.psm1  FearRuntimeExecutable.psm1  FearRuntimeLayout.psm1  FearRuntimeStageOwnership.psm1  FearRuntimeStagePlan.psm1  FearRuntimeStageSafety.psm1  FearSteamLaunch.psm1  FearTexturePackage.psm1  Get-FearAiEncounterAcceptance.ps1  Get-FearAiProfileSummary.ps1  Get-FearControllerRuntime.ps1  Get-FearPostProcessRuntime.ps1  Install-FearMoreRetailSidecars.ps1  Invoke-FearLaaBootstrap.ps1  Invoke-FearRemixExperiment.ps1  New-FearHdTextureLitePackage.ps1  New-FearMoreLauncherPackage.ps1  New-FearRuntimeStage.ps1  README.md  Register-FearHdTexturePack.ps1  Start-FearMore.ps1  Test-AiTimingSource.ps1  Test-ClientFxHighFpsSource.ps1  Test-CorpsePersistenceSource.ps1  Test-CursorLifecycleSource.ps1  Test-EffectsTargetQualitySource.ps1  Test-EnhancedGoreSource.ps1  Test-FearAiEncounterAcceptance.ps1  Test-FearCameraCaptureAnalyzer.ps1  Test-FearCameraDiagnosticStage.ps1  (+31 more)
tools/runtime/config/: dgVoodoo-d3d11-max2x.conf  dgVoodoo-d3d11.conf  rtx-remix-bridge.conf  rtx-remix-runtime.conf
tools/runtime/package/: Launch FearMore.cmd  Verify FearMore Package.cmd
tools/runtime/postprocess/Shaders/: FearMoreCAS.fx
tools/runtime/postprocess/config/: FearMore-CAS.seed.ini  ReShade.seed.ini
tools/runtime/postprocess/licenses/: AMD-CAS-MIT.txt  ReShade-BSD-3-Clause.txt
