add_library(ClientShell SHARED
	AccuracyMgr.cpp
	AccuracyVisualization.cpp
	ActivateObjectFX.cpp
	AimMagnetFX.cpp
	AimMgr.cpp
	AutoTargetMgr.cpp
	BaseMenu.cpp
	BaseScreen.cpp
	BindMgr.cpp
	CameraOffsetMgr.cpp
	CharacterDisplay.cpp
	CharacterFX.cpp
	CheatMgr.cpp
	client_physics.cpp
	ClientConnectionMgr.cpp
	ClientDB.cpp
	ClientFXInstance.cpp
	ClientFXMgr.cpp
	ClientFXSequence.cpp
	ClientInfoMgr.cpp
	ClientMeleeCollisionController.cpp
	ClientNodeTrackerContext.cpp
	ClientPhysicsCollisionMgr.cpp
	ClientSaveLoadMgr.cpp
	ClientSoundMgr.cpp
	ClientSoundMixer.cpp
	ClientSoundNonPointFX.cpp
	ClientUtilities.cpp
	ClientVoteMgr.cpp
	ClientWeapon.cpp
	ClientWeaponMgr.cpp
	ClientWeaponUtils.cpp
	CMoveMgr.cpp
	ConditionalAnimationController.cpp
	ControlPointSFX.cpp
	Credits.cpp
	CTFFlagBaseSFX.cpp
	CTFFlagSFX.cpp
	CursorMgr.cpp
	CustomCtrls.cpp
	DamageFXMgr.cpp
	DebugLineFX.cpp
	DynamicSectorVolumeFX.cpp
	EntryToolLockFX.cpp
	ExplosionFX.cpp
	FearMoreCameraProbe.cpp
	FearMoreControllerMgr.cpp
	FearMoreCorpsePersistence.cpp
	FearMoreDefaultBindingResolver.cpp
	FearMoreGraphicsSettings.cpp
	FearMoreRemasterQuality.cpp
	FinishingMoveFX.cpp
	FlashLight.cpp
	../Shared/ForceVolume.cpp
	ForensicObjectFX.cpp
	FrameStatConsoleInfo.cpp
	FullScreenTint.cpp
	GameClientShell.cpp
	GameRuleCtrls.cpp
	GameSettings.cpp
	GameStreamingMgr.cpp
	GlobalClientMgr.cpp
	GlobalsInit.cpp
	HeadBobMgr.cpp
	HitBox.cpp
	../Shared/HostOptionsMapMgr.cpp
	HUDActivate.cpp
	HUDActivateObject.cpp
	HUDAmmo.cpp
	HUDAmmoStack.cpp
	HUDAnimation.cpp
	HUDArmor.cpp
	HUDBar.cpp
	HUDBuildVersion.cpp
	HUDChatInput.cpp
	HUDControlPoint.cpp
	HUDControlPointBar.cpp
	HUDCrosshair.cpp
	HUDCTFBase.cpp
	HUDCTFFlag.cpp
	HUDDamageDir.cpp
	HUDDebug.cpp
	HUDDebugInput.cpp
	HUDDecision.cpp
	HUDDialogue.cpp
	HUDDistance.cpp
	HUDEndRoundMessage.cpp
	HUDEvidence.cpp
	HUDFlashlight.cpp
	HUDFocus.cpp
	HUDGear.cpp
	HUDGearList.cpp
	HUDGrenade.cpp
	HUDHealth.cpp
	HUDHealth2.cpp
	HUDInstinct.cpp
	HUDInventory.cpp
	HUDInventoryList.cpp
	HUDItem.cpp
	HUDMessage.cpp
	HUDMessageQueue.cpp
	HUDMeter.cpp
	HUDMgr.cpp
	HUDNavMarker.cpp
	HUDNavMarkerMgr.cpp
	HUDOverlay.cpp
	HUDPaused.cpp
	HUDPlayerList.cpp
	HUDRadio.cpp
	HUDRespawn.cpp
	HUDScoreDiff.cpp
	HUDScores.cpp
	HUDSlowMo.cpp
	HUDSonicBreath.cpp
	HUDSpectator.cpp
	HUDSprintBoost.cpp
	HUDSubtitles.cpp
	HUDSwap.cpp
	HUDTeamScores.cpp
	HUDTimer.cpp
	HUDTitleSafeAreaNTSC.cpp
	HUDToolSelect.cpp
	HUDTransmission.cpp
	HUDVote.cpp
	HUDWeapon.cpp
	HUDWeaponBreak.cpp
	HUDWeaponList.cpp
	InterfaceMgr.cpp
	InterfaceResMgr.cpp
	JumpVolumeFX.cpp
	LadderFX.cpp
	LadderMgr.cpp
	LayoutDB.cpp
	LeanMgr.cpp
	LightScaleMgr.cpp
	LoadingScreen.cpp
	LoadingScreenLayout.cpp
	MarkSFX.cpp
	MenuEndRound.cpp
	MenuMgr.cpp
	MenuMission.cpp
	MenuSystem.cpp
	MessageBox.cpp
	MissionMgr.cpp
	ModelDecalMgr.cpp
	NavMarkerFX.cpp
	NodeBlink.cpp
	NodeController.cpp
	objectdetector.cpp
	OrbitalScreenshotMgr.cpp
	PerformanceLog.cpp
	PerformanceLogMgr.cpp
	PerformanceMgr.cpp
	PerformanceTest.cpp
	PhysicsCollisionSystemFX.cpp
	PhysicsConstraintFX.cpp
	PickupItemFX.cpp
	PlayerBodyMgr.cpp
	PlayerCamera.cpp
	PlayerLureFX.cpp
	PlayerMgr.cpp
	PlayerSoundFX.cpp
	PlayerStats.cpp
	PlayerViewAttachmentMgr.cpp
	PolyGridFX.cpp
	ProfileMgr.cpp
	ProjectileFX.cpp
	RenderTargetFX.cpp
	RenderTargetGroupFX.cpp
	ScatterFX.cpp
	ScmdConsoleDriver_CShell.cpp
	ScoresCtrl.cpp
	ScreenAudio.cpp
	ScreenConfigure.cpp
	ScreenControls.cpp
	ScreenCrosshair.cpp
	ScreenDisplay.cpp
	ScreenEffectFX.cpp
	ScreenFailure.cpp
	ScreenGame.cpp
	ScreenHostDownload.cpp
	ScreenHostVoting.cpp
	ScreenHostWeapons.cpp
	ScreenJoystick.cpp
	ScreenLoad.cpp
	ScreenMain.cpp
	ScreenMgr.cpp
	ScreenMouse.cpp
	ScreenMutePlayer.cpp
	ScreenOptions.cpp
	ScreenPerformance.cpp
	ScreenPerformanceAdvanced.cpp
	ScreenPerformanceCPU.cpp
	ScreenPerformanceGPU.cpp
	ScreenPlayer.cpp
	ScreenPlayerLoadout.cpp
	ScreenPlayerTeam.cpp
	ScreenPostload.cpp
	ScreenPreload.cpp
	ScreenProfile.cpp
	ScreenSave.cpp
	ScreenSingle.cpp
	ScreenTeam.cpp
	ScreenTintMgr.cpp
	ScreenVote.cpp
	ScreenWeapons.cpp
	SearchLightFX.cpp
	SFXMgr.cpp
	ShatterEffect.cpp
	ShatterEffectMgr.cpp
	ShellCasingFX.cpp
	SnowFX.cpp
	SpecialFXList.cpp
	SpecialFXNotifyMessageHandler.cpp
	SpecialMoveFX.cpp
	SpecialMoveMgr.cpp
	Stdafx.cpp
	TargetMgr.cpp
	TeamClientFXSFX.cpp
	TriggerFX.cpp
	TurretFX.cpp
	UserNotificationMgr.cpp
	UserNotifiers.cpp
	VehicleMgr.cpp
	VKDefs.cpp
	VolumetricLightFX.cpp
	WeaponDisplay.cpp
	WeaponFX.cpp
	Game_ClientShell.rc
	#Win32
	ScreenHost.cpp
	ScreenHostLevels.cpp
	ScreenHostOptionFile.cpp
	ScreenHostOptions.cpp
	ScreenMulti.cpp
	ServerBrowserCtrl.cpp
)

fear_find_engine_sdk_input(performance_monitor_hook performancemonitorhook.cpp)
if(performance_monitor_hook)
	target_sources(ClientShell PRIVATE "${performance_monitor_hook}")
else()
	message(FATAL_ERROR "ClientShell: the authoritative performancemonitorhook.cpp input is unavailable.")
endif()

fear_configure_game_target(ClientShell _CLIENTBUILD)
target_compile_definitions(ClientShell PRIVATE MEMTRACK_CLIENT)
target_include_directories(ClientShell PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}")
target_link_libraries(ClientShell PRIVATE
	FearSharedClient
	FearGui
	FearStdLith
	shell32
	winmm
	ws2_32
	shlwapi
)
fear_link_engine_library(ClientShell Shared_Assert "${FEAR_SHARED_ASSERT_LIBRARY}")
fear_link_engine_library(ClientShell Shared_CRC "${FEAR_SHARED_CRC_LIBRARY}")

set_target_properties(ClientShell PROPERTIES
	PREFIX ""
	OUTPUT_NAME "GameClient"
)
